cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_38.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/xcbc_enc.c:91: error: DEAD_STORE
  The value written to &out (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/xcbc_enc.c:91:13: Write of unused value
89.               tout0 = tin[0] ^ xor0 ^ inW0;
90.               tout1 = tin[1] ^ xor1 ^ inW1;
91.               l2cn(tout0, tout1, out, l + 8);
                  ^
92.               xor0 = tin0;
93.               xor1 = tin1;
